Even more basic structure

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,3 +1,10 @@
-<mat-toolbar>
-  Learn Reactive Programming
+<mat-toolbar class="mat-elevation-z2">
+  <p>Learn Reactive Programming</p>
+  <div class="header-links">
+    <button mat-icon-button routerLink="">
+      <mat-icon>home</mat-icon>
+    </button>
+    <button mat-button routerLink="companies">COMPANIES</button>
+    <button mat-button routerLink="people">PEOPLE</button>
+  </div>
 </mat-toolbar>
