--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,6 @@
-<p>
-  home works!
-</p>
+<mat-card>
+  <mat-card-title>
+    Welcome to Reactive Training
+  </mat-card-title>
+  <img src="https://image4.owler.com/logo/maarch_owler_20160229_031308_original.png">
+</mat-card>
