Basic structure complete

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
-<mat-card>
+<mat-card class="mat-elevation-z2">
   <mat-card-title>
     Welcome to Reactive Training
   </mat-card-title>
-  <img src="https://image4.owler.com/logo/maarch_owler_20160229_031308_original.png">
+  <img src="https://image4.owler.com/logo/maarch_owler_20160229_031308_original.png" alt="Maarch logo">
 </mat-card>
