--- a/src/app/companies/companies-list/companies-list.component.html
+++ b/src/app/companies/companies-list/companies-list.component.html
@@ -1,3 +1,38 @@
-<p>
-  companies-list works!
-</p>
+<mat-card>
+  <mat-card-title>
+    Companies
+  </mat-card-title>
+  <mat-card-content>
+    <mat-tab-group>
+      <mat-tab label="For profit">
+        <mat-accordion>
+          <mat-expansion-panel *ngFor="let company of (forProfit$ | async)">
+            <mat-expansion-panel-header>
+              <mat-panel-title>{{ company.companyName }}</mat-panel-title>
+              <mat-panel-description>{{ company.buzz | capitalize }}</mat-panel-description>
+            </mat-expansion-panel-header>
+            <div class="flex">
+              <span>Address</span>
+              <div class="address">
+                <span>{{ company.address.street }}</span>
+                <span>{{ company.address.city }}</span>
+                <span>{{ company.address.state }}</span>
+                <span>{{ company.address.zip }}</span>
+              </div>
+            </div>
+          </mat-expansion-panel>
+        </mat-accordion>
+      </mat-tab>
+      <mat-tab label="Non-profit">
+        <mat-accordion>
+          <mat-expansion-panel *ngFor="let company of (nonProfit$ | async)">
+            <mat-expansion-panel-header>
+              <mat-panel-title>{{ company.companyName }}</mat-panel-title>
+              <mat-panel-description>{{ company.buzz }}</mat-panel-description>
+            </mat-expansion-panel-header>
+          </mat-expansion-panel>
+        </mat-accordion>
+      </mat-tab>
+    </mat-tab-group>
+  </mat-card-content>
+</mat-card>
