--- a/src/app/companies/companies-list/companies-list.component.html
+++ b/src/app/companies/companies-list/companies-list.component.html
@@ -28,7 +28,7 @@
           <mat-expansion-panel *ngFor="let company of (nonProfit$ | async)">
             <mat-expansion-panel-header>
               <mat-panel-title>{{ company.companyName }}</mat-panel-title>
-              <mat-panel-description>{{ company.buzz }}</mat-panel-description>
+              <mat-panel-description>{{ company.buzz | capitalize }}</mat-panel-description>
             </mat-expansion-panel-header>
           </mat-expansion-panel>
         </mat-accordion>
