--- a/src/app/companies/companies-list/companies-list.component.html
+++ b/src/app/companies/companies-list/companies-list.component.html
@@ -20,6 +20,9 @@
                 <span>{{ company.address.zip }}</span>
               </div>
             </div>
+            <mat-action-row>
+              <button mat-flat-button color="primary" routerLink="{{ company.id }}">EDIT</button>
+            </mat-action-row>
           </mat-expansion-panel>
         </mat-accordion>
       </mat-tab>
