Edit company worksé

--- a/src/app/companies/company-view/company-view.component.html
+++ b/src/app/companies/company-view/company-view.component.html
@@ -1,3 +1,26 @@
-<p>
-  company-view works!
-</p>
+<mat-card>
+  <mat-card-title>
+    Edit company
+  </mat-card-title>
+  <mat-card-content>
+    <form [formGroup]="companyForm">
+      <mat-form-field>
+        <input type="text" matInput placeholder="Company Name" formControlName="companyName">
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Company type</mat-label>
+        <mat-select formControlName="companyType">
+          <mat-option value="For Profit">For Profit</mat-option>
+          <mat-option value="Non-profit">Non-profit</mat-option>
+        </mat-select>
+      </mat-form-field>
+      <mat-form-field>
+        <input type="text" matInput placeholder="Buzzline" formControlName="buzz">
+      </mat-form-field>
+    </form>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-flat-button (click)="onGoBack()">CANCEL</button>
+    <button mat-flat-button (click)="onSubmit()" color="primary">SAVE</button>
+  </mat-card-actions>
+</mat-card>
