--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,3 +21,11 @@ mat-card {
   color: #BBB;
   display: block;
 }
+
+mat-form-field {
+  width: 100%;
+}
+
+mat-card-actions {
+  text-align: right;
+}
