--- a/src/app/companies/companies-list/companies-list.component.html
+++ b/src/app/companies/companies-list/companies-list.component.html
@@ -5,6 +5,7 @@
   <mat-card-content>
     <mat-tab-group>
       <mat-tab label="For profit">
+        <mat-spinner *ngIf="(loading$ | async)"></mat-spinner>
         <mat-accordion>
           <mat-expansion-panel *ngFor="let company of (forProfit$ | async)">
             <mat-expansion-panel-header>
@@ -27,6 +28,7 @@
         </mat-accordion>
       </mat-tab>
       <mat-tab label="Non-profit">
+        <mat-spinner *ngIf="(loading$ | async)"></mat-spinner>
         <mat-accordion>
           <mat-expansion-panel *ngFor="let company of (nonProfit$ | async)">
             <mat-expansion-panel-header>
@@ -42,6 +44,9 @@
                 <span>{{ company.address.zip }}</span>
               </div>
             </div>
+            <mat-action-row>
+              <button mat-flat-button color="primary" routerLink="{{ company.id }}">EDIT</button>
+            </mat-action-row>
           </mat-expansion-panel>
         </mat-accordion>
       </mat-tab>
