Ready for actions

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,9 @@
 <mat-toolbar class="mat-elevation-z2">
   <p>Learn Reactive Programming</p>
+  <div class="login-links">
+    <button mat-button (click)="onLogin()">LOGIN</button>
+    <button mat-button (click)="onLogout()">LOGOUT</button>
+  </div>
   <div class="header-links">
     <button mat-icon-button routerLink="">
       <mat-icon>home</mat-icon>
